fix: horizontal scroll all resolutions

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   background-color: #fff;
   padding: 80px 104px 0 104px;
-  width: 100vw;
   margin: auto;
   display: flex;
 }
