--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: space-between;
   padding: 0 104px 0 104px;
-  width: 100vw;
   margin: auto;
   box-sizing: border-box;
 }
