--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -53,7 +53,8 @@
   line-height: 22px;
   color: #1a1b22;
   caret-color: #2F71E5;
-  backdrop-filter: blur(8px);
+  /* backdrop-filter: blur(8px); */
+  -webkit-backdrop-filter: blur(8px);
 }
 
 .search-form__search-bar::placeholder {
@@ -152,7 +153,7 @@
     margin-left: 16px;
     flex-direction: column;
     background: none;
-    border-radius: none;
+    border-radius: 0px;
   }
   
   .search-form__search-bar {
